# polkit_demo

./: CMakeLists.txt  README.md  com.polkit.qt.example.policy  如何让polkit默认允许所有验证 - 研发部门Wiki.html
src/: CMakeLists.txt  main.cpp
src/filter/: dbus_filter.cpp  dbus_filter.h
src/message/: dbus_message.cpp  dbus_message.h
src/proxy/: dbus_proxy.cpp  dbus_proxy.h
test/: CMakeLists.txt  dbus_filter_test.cpp  dbus_message_test.cpp
